--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -1,8 +1,13 @@
 @media only screen and (max-width: 992px) {
-    .header-navbar .navbar-wrapper .navbar-logo{
+    .header-navbar .navbar-wrapper .navbar-logo {
         height: 75px;
     }
+
     .pcoded .pcoded-navbar .pcoded-item {
         margin-top: 30px !important;
     }
+}
+
+.wizard>.content>.body {
+    position: relative !important;
 }
