--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -43,6 +43,12 @@
     border-left: 5px solid var(--primary-color);
 }
 
+[class*=sidebar-dark-] .nav-sidebar>.nav-item>.nav-link.active {
+    border-left: 5px solid var(--primary-color) !important;
+    background-color: #efefef;
+    color: black;
+}
+
 /* .os-content {
     padding: 0px !important;
 } */
